--- a/Ray Tracing Project/Ray Tracing Project.csproj
+++ b/Ray Tracing Project/Ray Tracing Project.csproj
@@ -9,4 +9,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HelixToolkit.Wpf" Version="3.1.2" />
+  </ItemGroup>
+
 </Project>
