--- a/Ray Tracing Project/Ray Tracing Project.csproj
+++ b/Ray Tracing Project/Ray Tracing Project.csproj
@@ -11,6 +11,11 @@
 
   <ItemGroup>
     <PackageReference Include="HelixToolkit.Wpf" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RayTracer\RayTracer.csproj" />
   </ItemGroup>
 
 </Project>
