--- a/Ray Tracing Project/Ray Tracing Project.csproj
+++ b/Ray Tracing Project/Ray Tracing Project.csproj
@@ -20,9 +20,11 @@
   <ItemGroup>
     <PackageReference Include="HelixToolkit.Wpf" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.3" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ProjectUtilities\ProjectUtilities.csproj" />
     <ProjectReference Include="..\RayTracer\RayTracer.csproj" />
   </ItemGroup>
 
