--- a/RayTracer/RayTracer.csproj
+++ b/RayTracer/RayTracer.csproj
@@ -8,4 +8,8 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectUtilities\ProjectUtilities.csproj" />
+  </ItemGroup>
+
 </Project>
