--- a/Ray Tracing Project/Ray Tracing Project.csproj
+++ b/Ray Tracing Project/Ray Tracing Project.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\RayTracer\RayTracer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
+
 </Project>
